Add: addSearch.js 追加検索を行う機能を追加
Fix: 上記変更に対応
コールバックで書かれた部分を修正

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
             <input type="text" name="search_words" placeholder="検索ワード" value="">
             <input type="button" id="search" value="検索">
         </form>
+        <div id="subArea"></div>
 
         <input type="button" id="block" value="一括ブロック">
 
