--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
         </div>
         <!--　▲twitter風ここまで -->
 
-        <div class='error'>
+        <div class="error">
         </div>
         <script src="javascripts/main.js"></script>
     </body>
